Code cleanup  - using Java 5 language features (e.g., generics)  - using faster but not synchronized ArrayList instead of Vector where possible Version increased to 1.2  - especially since some changes will be needed in code using this library